# PAMSI-C-

./: README.md
Projekt_1/: CMakeLists.txt  Makefile  main
Projekt_1/inc/: All_Structures.hh  DoublyLinkedList.hh  Heap.hh  QueueTab.hh  SinglyLinkedList.hh  StackTab.hh  libraries.hh
Projekt_1/include/data_structures/: All_Structures.hh  DoublyLinkedList.hh  QueueList.hh  QueueTab.hh  SinglyLinkedList.hh  StackList.hh  StackTab.hh  libraries.hh
Projekt_1/src/: DoublyLinkedList.cpp  Heap.cpp  QueueTab.cpp  SinglyLinkedList.cpp  StackTab.cpp  main.cpp  test_data_structures.cpp  time_test.cpp
Projekt_2/: CMakeLists.txt  README.md
Projekt_2/include/algorithms/: All_Structures.hh  heapsort.h  libraries.hh  mergesort.h  quicksort.h
Projekt_2/latex/: tamplate.aux  tamplate.tex  tamplate.toc
Projekt_2/src/: test_sorting_algorithms.cpp  time_test.cpp
Projekt_3/: Makefile  main  test.txt  testyLista.cpp  testyMatrix.cpp
Projekt_3/inc/: Heap.hh  adjacency_list_graph.hpp  adjacency_matrix_graph.hpp  graph.hpp  libraries.hh  minimum_spanning_tree_algorithms.hpp  shortest_path_algorithms.hpp
Projekt_3/latex/: grafy_krekora.aux  grafy_krekora.tex  grafy_krekora.toc
Projekt_3/results/: bellford_list.txt  bellford_matrix.txt  dijkstra_list.txt  dijkstra_matrix.txt
Projekt_3/src/: main.cpp
Projekt_4/: TicTacToe.cpp  TicTacToe.hh  libraries.hh  main.cpp
Projekt_4/latex/: tictac.aux  tictac.tex  tictac.toc
